--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </ul><!-- #nav-list -->
       </div><!-- .collapse .navbar-collapse -->
     </div><!-- .container -->
-  </nav><!-- #head
+  </nav><!-- #head -->
 </header>
 
   <h1>Hello Coursera!</h1>
